maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:9: error: type mismatch;
 found   : Boolean
 required: Int
  while(getIndication(getX(),getY()!=1))//!estSurBiscuit())
                                   ^